<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    tools:context="com.example.ctadmin.quizzard.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sample_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        tools:layout_editor_absoluteY="162dp"
        tools:layout_editor_absoluteX="133dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        tools:layout_editor_absoluteY="231dp"
        tools:layout_editor_absoluteX="140dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        tools:layout_editor_absoluteY="296dp"
        tools:layout_editor_absoluteX="127dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        tools:layout_editor_absoluteY="363dp"
        tools:layout_editor_absoluteX="141dp" />






</LinearLayout>